Changelog
=========

1.6-dev0 - (unreleased)
---------------------------

1.5 - (2025-07-23)
---------------------------
* Change: Update documentation
  [alecghica]

1.4 - (2025-04-25)
---------------------------
* Change: Commit transaction at end of sync
  [david-batranu]

1.3 - (2025-03-12)
---------------------------
* Change: Tests + coverage
  [david-batranu]

1.2 - (2025-03-11)
---------------------------
* Task: EEA Entra ID regular sync script
  [david-batranu - refs #284052]

1.1 - (2025-03-06)
---------------------------
* Change: Update README.md [alecghica]

1.0a1 - (2025-03-06)
---------------------------
* Task: Initial release
  [david-batranu - refs #281898]