@@ -6,4 +6,3 @@
 isort>=5
 black==22.8.0
 tox==4.3.5
-flake8==5.0.4
