@@ -13,4 +13,3 @@
 tox==4.3.5
 isort>=5
 black==24.10.0
-flake8==7.1.1
