@@ -8,20 +8,3 @@ ignore =
 [isort]
 # black compatible isort rules:
 profile = plone
-
-[flake8]
-# black compatible flake8 rules:
-ignore =
-    W503,
-    C812,
-    E501
-    T001
-    C813
-    C101
-# E203, E266
-exclude = bootstrap.py,docs,*.egg.,omelette
-max-line-length = 88
-max-complexity = 18
-select = B,C,E,F,W,T4,B9
-
-builtins = unicode,basestring
