@@ -1,4 +1,3 @@
 # -*- coding: utf-8 -*-
-# pylint: disable=missing-module-docstring
 
 __import__("pkg_resources").declare_namespace(__name__)
