@@ -1,5 +1,4 @@
 # -*- coding: utf-8 -*-
-# pylint: disable=all
 
 from plone.app.testing import PLONE_FIXTURE
 from plone.app.testing import FunctionalTesting
