@@ -1,8 +1,6 @@
 """ Migration step.
 """
 
-# pylint: disable=import-error,no-name-in-module,protected-access
-
 import logging
 
 from BTrees.OOBTree import OOBTree  # noqa
